2006-06-17 nowel(S2Dao.PHP5-1.1.0-RC5)

    * move: context パッケージを移動しました。
        - /dao/context/S2Dao_CommandContextImpl.class.php to /dao/impl/S2Dao_CommandContextImpl.class.php
    * move: procedure パッケージを移動しました。
        - /dao/util/procedure to /dao/dbms/proceudre
    * add: DBMataData パッケージの追加
        - /dao/dbms/dbmeta/S2Dao_DBMetaDataFactory.class.php
        - /dao/dbms/dbmeta/S2Dao_FirebirdDBMetaData.class.php
        - /dao/dbms/dbmeta/S2Dao_OracleDBMetaData.class.php
        - /dao/dbms/dbmeta/S2Dao_PostgreSQLDBMetaData.class.php
        - /dao/dbms/dbmeta/S2Dao_SQLiteDBMataData.class.php
        - /dao/dbms/dbmeta/S2Dao_StandardDBMetaData.class.php
    * add: ResultSet パッケージの追加、ResultSet クラスの移動
        - /dao/impl/S2Dao_BeanArrayMetaDataResultSetHandler.class.php
            to /dao/resultset/S2Dao_BeanArrayMetaDataResultSetHandler.class.php
        - /dao/impl/S2Dao_BeanListMetaDataResultSetHandler.class.php
            to /dao/resultset/S2Dao_BeanListMetaDataResultSetHandler.class.php
        - /dao/impl/S2Dao_BeanMetaDataResultSetHandler.class.php
            to /dao/resultset/S2Dao_BeanMetaDataResultSetHandler.class.php
        - /dao/resultset/S2Dao_BeanJsonMetaDataResultSetHandler.class.php
        - /dao/resultset/S2Dao_BeanYamlMetaDataResultSetHandler.class.php

2006-06-16 nowel(S2Dao.PHP5-1.1.0-RC4)

================ S2Dao.PHP5-1.1.0-RC4 更新履歴 ===================

    * fix: AnnotationReader の処理を最適化しました。(nowel)
    * info: Licenses 表記を全てのファイルに適用しました。(nowel)
    * remove: S2ActiveRecord のパッケージを削除しました。(nowel)
    * add: S2Pagerを追加しました(yonekawa)
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerS2DaoInterceptorWrapper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerResultSetWrapper.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerSupport.class.php
        - add: /src/s2dao.php5/org/seasar/dao/pager/S2Dao_PagerViewHelper.class.php