@@ -1,0 +1,1 @@
+SELECT * FROM CD WHERE ID = /*id*/16 OR TITLE = /*title*/'18';
