@@ -1,0 +1,21 @@
+CREATE TABLE CD(
+    ID INTEGER NOT NULL,
+    TITLE VARCHAR(100),
+    CONTENT VARCHAR(200),
+    PRIMARY KEY(ID)
+);
+
+INSERT INTO CD (ID, CONTENT, TITLE) VALUES (1, 'hello!!', 'S2Dao!!!');
+
+--
+-- MySQL TABLE
+--
+CREATE TABLE SHELF (
+    ID INTEGER NOT NULL,
+    CD_ID INTEGER NOT NULL,
+    ADD_TIME DATETIME DEFAULT '2005-12-25 10:12:13',
+    PRIMARY KEY(ID, CD_ID),
+    FOREIGN KEY(CD_ID) REFERENCES CD(ID)
+);
+
+INSERT INTO SHELF(CD_ID, ADD_TIME) VALUES(1, '2005-12-18 10:12:34');
